--- a/app/templates/levelselection.html
+++ b/app/templates/levelselection.html
@@ -22,6 +22,9 @@
       color: #007bff;
       background-color: #fff;
     }
+    .card-text, .card-title{
+      color: black;
+    }
   </style>
 </head>
 
