--- a/app/templates/expert.html
+++ b/app/templates/expert.html
@@ -1,40 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beginner</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <style>
+    .card {
+      border-radius: 25px;
+    }
+
+    .card img {
+      border-radius: 25%;
+      width: 300px;
+      height: 300px;
+    }
+
+    .card .btn {
+      border-radius: 25px;
+    }
+
+    .card .btn:hover {
+      color: #007bff;
+      background-color: #fff;
+    }
+    .card-text, .card-title{
+      color: black;
+    }
+  </style>
 </head>
 
 <body class="bg-dark text-white">
-    <h1 class="text-center mt-3 mb-4">Expert</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <img src="../static/images/downdog.jpg" alt="Downdogpose" class="img-fluid"
-                    style="height: 500px; width: 500px;">
-                <h2>Downdog</h2>
-                <button class="btn btn-primary btn-block">Get Knowledge</button>
+  <div class="container-fluid mt-4">
+    <h1 class="text-center  text-white mb-4">Beginner</h1>
+    <div class="row justify-content-center">
+      <div class="col-4 h-100">
+        <div class="card mb-3">
+          <div class="card-body text-center">
+            <h2 class="card-title">Downdog</h2>
+            <img src="../static/images/downdog.jpg" alt="Downdog pose Image" width="300px" height="300px"
+              class="mx-auto d-block">
+            <div class="text-center mt-4">
+              <a href="{% url 'downdog-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
             </div>
-            <div class="col-4">
-                <img src="../static/images/warrior1.jpg" alt="Image 3" class="img-fluid"
-                    style="height: 500px; width: 500px;">
-                <h2>Warrior1</h2>
-                <button class="btn btn-primary btn-block">Get Knowledge</button>
-            </div>
-            <div class="col-4">
-                <img src="../static/images/warrior3.jpg" alt="Warrior3pose" class="img-fluid"
-                    style="height: 500px; width: 500px;">
-                <h2>Warrior3</h2>
-                <button class="btn btn-primary btn-block">Get Knowledge</button>
-            </div>
-
+          </div>
         </div>
+      </div>
+      <div class="col-4 h-100">
+        <div class="card mb-3">
+          <div class="card-body text-center">
+            <h2 class="card-title">Warrior1</h2>
+            <img src="../static/images/warrior1.jpg" alt="Warrior1 Pose Image" width="300px" height="300px"
+              class="mx-auto d-block">
+            <div class="text-center mt-4">
+              <a href="{% url 'warrior1-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-4 h-100">
+        <div class="card mb-3">
+          <div class="card-body text-center">
+            <h2 class="card-title">Warrior3</h2>
+            <img src="../static/images/warrior3.jpg" alt="Warrior3 Pose Image" width="300px" height="300px"
+              class="mx-auto d-block">
+            <div class="text-center mt-4">
+              <a href="{% url 'warrior2-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
