--- a/app/templates/posedetection.html
+++ b/app/templates/posedetection.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Pose Detection</title>
 </head>
+
 <body>
-    <h1>Pose Detection</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center mt-3">
+                <h1>Pose Detection</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <!-- Place your video in a styled container -->
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xxxxxxxxxxx"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
