--- a/app/templates/posedetection.html
+++ b/app/templates/posedetection.html
@@ -19,12 +19,8 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <!-- Place your video in a styled container -->
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xxxxxxxxxxx"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <img src="{% url 'posedetection' %}">
                 </div>
             </div>
         </div>
