--- a/app/templates/posedetection.html
+++ b/app/templates/posedetection.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <iframe src="{% url 'posedetection' %}" width="500px" height="500px"></iframe>
+                    <img src="{% url 'posedetection' %}" width="500px" height="500px">
                 </div>
             </div>
         </div>
