--- a/app/templates/t-knowledge.html
+++ b/app/templates/t-knowledge.html
@@ -60,7 +60,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
-                    <a href="{% url 'posedetection' %}" class="btn btn-primary btn-lg mx-auto">Start</a>
+                    <a href="{% url 'result' %}" class="btn btn-primary btn-lg mx-auto">Start</a>
                 </div>
             </div>
         </div>
