--- a/app/templates/posedetection.html
+++ b/app/templates/posedetection.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Pose Detection</title>
+    <style>
+        .row{
+            border: 2px solid white;
+        }
+    </style>
 </head>
 
-<body>
+<body class="bg-dark text-white">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center mt-3">
@@ -20,7 +25,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="embed-responsive embed-responsive-16by9">
-                    <img src="{% url 'posedetection' %}" width="500px" height="500px">
+                    <img src="{% url 'posedetection' %}" alt="">
                 </div>
             </div>
         </div>
