--- a/app/templates/posedetection.html
+++ b/app/templates/posedetection.html
@@ -9,7 +9,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <title>Pose Detection</title>
     <style>
-        .row{
+        .row {
             border: 2px solid white;
         }
     </style>
@@ -23,10 +23,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <img src="{% url 'posedetection' %}" alt="">
-                </div>
+            <div class="col-12 text-center">
+                <img src="{% url 'posedetection' %}" alt="Video Stream">
             </div>
         </div>
     </div>
