--- a/app/templates/goddess-knowledge.html
+++ b/app/templates/goddess-knowledge.html
@@ -31,15 +31,15 @@
     <div class="container-fluid h-100">
         <div class="row h-50">
             <div class="col-12 p-0">
-                <h1 class="text-center mt-5">Warrior 1 Pose Tutorial</h1>
+                <h1 class="text-center mt-5">Goddess Pose Tutorial</h1>
             </div>
         </div>
         <div class="row d-flex">
             <div class="col-12 col-md-6 p-0 video-container ml-5">
                 <!-- Place your video in a styled container -->
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/kkGY3xBnaGc?start=3"
+                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wgXefCprLm0"
                     title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
             </div>
             <div class="col-12 col-md-6 p-4 text-container mr-5">
