--- a/app/templates/intermediate.html
+++ b/app/templates/intermediate.html
@@ -38,7 +38,7 @@
                 <div class="card mb-3">
                     <div class="card-body text-center">
                         <h2 class="card-title">Plank</h2>
-                        <img src="../static/images/plank.jpg" alt="Beginner Yoga Image" width="300px"
+                        <img src="../static/images/plank.jpg" alt="Plank Asana Image" width="300px"
                             height="300px" class="mx-auto d-block">
                         <div class="text-center mt-4">
                             <a href="{% url 'plank-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
@@ -49,11 +49,11 @@
             <div class="col-4 h-100">
                 <div class="card mb-3">
                     <div class="card-body text-center">
-                        <h2 class="card-title">Cobra</h2>
-                        <img src="../static/images/cobra.jpg" alt="Intermediate Yoga Image" width="300px"
+                        <h2 class="card-title">Tree</h2>
+                        <img src="../static/images/treepose.jpg" alt="Tree Asana Image" width="300px"
                             height="300px" class="mx-auto d-block">
                         <div class="text-center mt-4">
-                            <a href="{% url 'cobra-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
+                            <a href="{% url 'tree-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
                         </div>
                     </div>
                 </div>
@@ -61,12 +61,12 @@
             <div class="col-4 h-100">
                 <div class="card mb-3">
                     <div class="card-body text-center">
-                        <h2 class="card-title">Triangle</h2>
+                        <h2 class="card-title">Goddess</h2>
 
-                        <img src="../static/images/expert-yoga.jpg" alt="Expert Yoga Image" width="300px" height="300px"
+                        <img src="../static/images/goddess.jpg" alt="Goddess Asana Image" width="300px" height="300px"
                             class="mx-auto d-block">
                         <div class="text-center mt-4">
-                            <a href="{% url 'triangle-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
+                            <a href="{% url 'goddess-knowledge' %}" class="btn btn-primary">Get Knowledge</a>
                         </div>
                     </div>
                 </div>
