--- a/app/templates/user_signin.html
+++ b/app/templates/user_signin.html
@@ -5,19 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/nav.css">
+    <title>SIGNIN</title>
+    <link rel="stylesheet" href="../static/css/signin.css">
     <link rel="icon" href="../static/images/Monk-logo.png">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Pose Detection</title>
-    <style>
-        .row {
-            border: 2px solid white;
-        }
-    </style>
 </head>
 
-<body class="bg-dark text-white">
+<body>
     <nav class="navbar">
         <a href="#home" class="anch">
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
@@ -42,20 +35,29 @@
         </div>
 
         <div class="nav">
-            <a class="nav-link" href="level_selection.html">Home</a>
+            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="type_of_user.html">SignUp</a> | <a href="type_of_user.html"
+                class="nav-link">SignIn</a>
         </div>
     </nav>
     <div class="container">
-        <div class="row">
-            <div class="col-12 text-center mt-3">
-                <h1>Pose Detection</h1>
+        <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img" width="500px" height="500px">
+        <form method="post" action="{% url 'signin' %}" class="signin">
+            <h1 class="title">SignIn</h1>
+            <div class="kname">
+                <label for="email" class="label">Email Id</label><br>
+                <input type="email" class="email" name="email" required placeholder="Enter your email id"><br>
+                <label for="pwd" class="label">Password</label><br>
+                <input type="password" name="pwd" class="input" required placeholder="Enter your password"><br>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12 text-center">
-                <img src="{% url 'posedetection' %}" alt="Video Stream">
+            <div class="check">
+                <input type="checkbox" required><label for="checkbox" class="tc"> Keep me signed in.</label><br>
             </div>
-        </div>
+            <input type="submit" name="Submit" class="submit">
+            <p class="pa">
+                Don't have an account? <a href="user_signup.html" class="signup">SignUp</a>
+            </p>
+        </form>
     </div>
 </body>
 
