--- a/app/templates/tree-knowledge.html
+++ b/app/templates/tree-knowledge.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="../static/css/nav.css">
+    <link rel="icon" href="../static/images/Monk-logo.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <style>
@@ -28,6 +30,33 @@
 </head>
 
 <body class="bg-dark text-white">
+    <nav class="navbar">
+        <a href="#home" class="anch">
+            <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
+        <div class="watermark1">
+            <a href="#home" class="anch">
+                <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (5).png" class="watermark2" alt="">
+                <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt="">
+            </a>
+        </div>
+
+        <div class="nav">
+            <a class="nav-link" href="level_selection.html">Home</a>
+        </div>
+    </nav>
     <div class="container-fluid h-100">
         <div class="row h-50">
             <div class="col-12 p-0">
