--- a/app/templates/cobra-knowledge.html
+++ b/app/templates/cobra-knowledge.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="nav">
-            <a class="nav-link" href="level_selection.html">Home</a>
+            <a class="nav-link" href="{% url 'levelselection'%}">Home</a>
         </div>
     </nav>
     <div class="container-fluid h-100">
