--- a/app/templates/advanced.html
+++ b/app/templates/advanced.html
@@ -34,10 +34,10 @@
 
 <body class="bg-dark text-white">
   <nav class="navbar">
-    <a href="#home" class="anch">
+    <a href="{% url 'levelselection' %}" class="anch">
       <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
     <div class="watermark1">
-      <a href="#home" class="anch">
+      <a href="{% url 'levelselection' %}" class="anch">
         <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
         <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
         <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
@@ -57,7 +57,7 @@
     </div>
 
     <div class="nav">
-      <a class="nav-link" href="level_selection.html">Home</a>
+      <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
     </div>
   </nav>
   <div class="container-fluid mt-4">
