--- a/app/templates/beginner.html
+++ b/app/templates/beginner.html
@@ -34,10 +34,10 @@
 
 <body class="bg-dark text-white">
   <nav class="navbar">
-    <a href="#home" class="anch">
+    <a href="{% url 'levelselection' %}" class="anch">
       <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
     <div class="watermark1">
-      <a href="#home" class="anch">
+      <a href="{% url 'levelselection' %}" class="anch">
         <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
         <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
         <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
