--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -12,10 +12,10 @@
 
 <body>
     <nav class="navbar">
-        <a href="#home" class="anch">
+        <a href="{% url 'blog' %}" class="anch">
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
-            <a href="#home" class="anch">
+            <a href="{% url 'blog' %}" class="anch">
                 <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
@@ -35,8 +35,8 @@
         </div>
 
         <div class="nav">
-            <a class="nav-link" href="level_selection.html">Home</a>
-            <a class="nav-link" href="type_of_user.html">Signup</a>|<a class="nav-link" href="type_of_user.html">Signin</a>
+            <a class="nav-link" href="{% url 'blog' %}">Home</a>
+            <a class="nav-link" href="{% url 'type_of_user' %}">Signup</a>|<a class="nav-link" href="{% url 'type_of_user' %}">Signin</a>
         </div>
     </nav>
 </body>
