--- a/app/templates/details_collection.html
+++ b/app/templates/details_collection.html
@@ -12,10 +12,10 @@
 
 <body>
     <nav class="navbar">
-        <a href="#home" class="anch">
+        <a href="{% url 'levelselection' %}" class="anch">
             <img class="logo" src="../static/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
-            <a href="#home" class="anch">
+            <a href="{% url 'levelselection' %}" class="anch">
                 <img src="../static/watermark/watermark (1).png" class="watermark" alt="">
                 <img src="../static/watermark/watermark (2).png" class="watermark" alt="">
                 <img src="../static/watermark/watermark (3).png" class="watermark" alt="">
@@ -34,7 +34,7 @@
             </a>
         </div>
         <div class="nav">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
             <!-- <a class="nav-link" href="signup.html">SignUp</a> | <a href="signin.html" class="nav-link">SignIn</a> -->
         </div>
     </nav>
