--- a/app/templates/level_selection.html
+++ b/app/templates/level_selection.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/css/level_selection.css">
+  <link rel="stylesheet" href="../static/css/nav.css">
   <link rel="icon" href="../static/images/Monk-logo.png">
   <style>
     .card {
@@ -34,10 +34,10 @@
 
 <body class="bg-dark text-white">
   <nav class="navbar">
-    <a href="#home" class="anch">
+    <a href="{% url 'levelselection' %}" class="anch">
       <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
     <div class="watermark1">
-      <a href="#home" class="anch">
+      <a href="{% url 'levelselection' %}" class="anch">
         <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
         <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
         <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
@@ -57,7 +57,7 @@
     </div>
 
     <div class="nav">
-      <a class="nav-link" href="level_selection.html">Home</a>
+      <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
     </div>
   </nav>
   <div class="container-fluid mt-3">
