--- a/app/templates/nutritionist_signup.html
+++ b/app/templates/nutritionist_signup.html
@@ -67,50 +67,53 @@
                     width="500px">
             </div>
             <div class="col-md-6 col-sm-12 border border-dark">
-                <h2 class="text-center">Sign Up</h2>
-                {% csrf_token %}
-                {% if messages %}
-                {% for message in messages %}
-                {% if message.tags == "error" %}
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                {% endif %}
-                {% endfor %}
-                {% endif %}
-                <div class="form-group" style="display: inline-block; width: 45%;">
-                    <label for="firstname">First Name</label>
-                    <input type="text" id="firstname" name="firstname" class="form-control"
-                        placeholder="Enter your first name">
-                </div>
-                <div class="form-group" style="display: inline-block; width: 45%; margin-left: 8%;">
-                    <label for="lastname">Last Name</label>
-                    <input type="text" id="lastname" name="lastname" class="form-control"
-                        placeholder="Enter your last name">
-                </div>
+                <form action="{% url 'user_signup' %}" method="post">
+                    <h2 class="text-center">Sign Up</h2>
+                    {% csrf_token %}
+                    {% if messages %}
+                    {% for message in messages %}
+                    {% if message.tags == "error" %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+                    {% endif %}
+                    <div class="form-group" style="display: inline-block; width: 45%;">
+                        <label for="firstname">First Name</label>
+                        <input type="text" id="firstname" name="firstname" class="form-control"
+                            placeholder="Enter your first name">
+                    </div>
+                    <div class="form-group" style="display: inline-block; width: 45%; margin-left: 8%;">
+                        <label for="lastname">Last Name</label>
+                        <input type="text" id="lastname" name="lastname" class="form-control"
+                            placeholder="Enter your last name">
+                    </div>
 
-                <div class="form-group mb-2">
-                    <label for="email">Email</label>
-                    <input type="email" id="eamil" name="email" class="form-control" placeholder="Enter your email id">
-                </div>
-                <div class="form-group mb-2">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" class="form-control"
-                        placeholder="Enter your password">
-                </div>
-                <div class="form-group mb-2">
-                    <label for="password">Confirm Password</label>
-                    <input type="password" id="password" name="password" class="form-control"
-                        placeholder="Confirm your password">
-                </div>
-                <div class="text-center mt-2">
-                    Already have an account? <a href="user_signin.html">Signin</a>
-                </div>
+                    <div class="form-group mb-2">
+                        <label for="email">Email</label>
+                        <input type="email" id="eamil" name="email" class="form-control"
+                            placeholder="Enter your email id">
+                    </div>
+                    <div class="form-group mb-2">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password" class="form-control"
+                            placeholder="Enter your password">
+                    </div>
+                    <div class="form-group mb-2">
+                        <label for="password">Confirm Password</label>
+                        <input type="password" id="password" name="password" class="form-control"
+                            placeholder="Confirm your password">
+                    </div>
+                    <div class="text-center mt-2">
+                        Already have an account? <a href="user_signin.html">Signin</a>
+                    </div>
 
-                <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign Up</button>
+                    <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign Up</button>
+                </form>
             </div>
         </div>
     </div>
