--- a/app/templates/physician_signin.html
+++ b/app/templates/physician_signin.html
@@ -67,36 +67,38 @@
                     width="500px">
             </div>
             <div class="col-md-6 col-sm-12 border border-dark">
-                <h2 class="text-center">Sign In</h2>
-                {% csrf_token %}
-                {% if messages %}
-                {% for message in messages %}
-                {% if message.tags == "error" %}
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                {% else %}
-                {% endif %}
-                {% endfor %}
-                {% endif %}
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" name="username" class="form-control"
-                        placeholder="Enter your username">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" class="form-control"
-                        placeholder="Enter your password">
-                </div>
-                <div class="m-3 text-center">
-                    Don't have an account? <a href="user_signup.html">Signup</a>
-                </div>
+                <form action="{% url 'user_signin' %}" method="post">
+                    <h2 class="text-center">Sign In</h2>
+                    {% csrf_token %}
+                    {% if messages %}
+                    {% for message in messages %}
+                    {% if message.tags == "error" %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {% else %}
+                    {% endif %}
+                    {% endfor %}
+                    {% endif %}
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" id="username" name="username" class="form-control"
+                            placeholder="Enter your username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password" class="form-control"
+                            placeholder="Enter your password">
+                    </div>
+                    <div class="m-3 text-center">
+                        Don't have an account? <a href="user_signup.html">Signup</a>
+                    </div>
 
-                <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign In</button>
+                    <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign In</button>
+                </form>
             </div>
         </div>
     </div>
