--- a/app/templates/type_of_user.html
+++ b/app/templates/type_of_user.html
@@ -17,10 +17,10 @@
 
 <body class="bg-dark text-white">
   <nav class="navbar">
-    <a href="#home" class="anch">
+    <a href="{% url 'levelselection' %}" class="anch">
       <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
     <div class="watermark1">
-      <a href="#home" class="anch">
+      <a href="{% url 'levelselection' %}" class="anch">
         <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
         <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
         <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
@@ -40,7 +40,7 @@
     </div>
 
     <div class="nav">
-      <a class="nav-link" href="blog.html">Home</a>
+      <a class="nav-link" href="{% url 'blog' %}">Home</a>
     </div>
   </nav>
   <div class="container text-center">
@@ -50,7 +50,7 @@
         <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="rounded" height="300px" width="300px" />
         <a href="#" class="link-primary">
           <h5 class="mt-2 display-6">
-            <a href="user_signin.html" class="link"><button class="btn btn-primary">User</button></a>
+            <a href="{% url 'user_signin' %}" class="link"><button class="btn btn-primary">User</button></a>
           </h5>
         </a>
       </div>
@@ -58,7 +58,7 @@
         <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="rounded" height="300px" width="300px" />
         <a href="#" class="link-primary">
           <h5 class="mt-2 display-6">
-            <a href="physician_signin.html" class="link"><button class="btn btn-primary">Physician</button></a>
+            <a href="{% url 'physician_signin' %}" class="link"><button class="btn btn-primary">Physician</button></a>
           </h5>
         </a>
       </div>
@@ -66,7 +66,7 @@
         <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="rounded" height="300px" width="300px" />
         <a href="#" class="link-primary">
           <h5 class="mt-2 display-6">
-            <a href="nutritionist_signin.html" class="link"><button class="btn btn-primary">Nutritionist</button></a>
+            <a href="{% url 'nutritionist_signin' %}" class="link"><button class="btn btn-primary">Nutritionist</button></a>
           </h5>
         </a>
       </div>
