--- a/app/templates/user_signin.html
+++ b/app/templates/user_signin.html
@@ -5,9 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SIGNIN</title>
-    <link rel="stylesheet" href="../static/css/signin.css">
+    <title>Signin</title>
+    <link rel="stylesheet" href="../static/css/nav.css">
     <link rel="icon" href="../static/images/Monk-logo.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+        .img-column {
+            padding: 0% 0% 0% 6%;
+        }
+
+        .form-group label,
+        .form-control {
+            font-size: 1.2rem;
+        }
+
+        h2 {
+            font-size: 3rem;
+            font-weight: bold;
+            color: #333;
+            letter-spacing: 2px;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -15,11 +35,11 @@
         <a href="#home" class="anch">
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
-            <a href="#home" class="anch">
-                <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
+            <a href="{% url 'blog' %}" class="anch">
+                <!-- <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt=""> -->
                 <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
@@ -27,37 +47,60 @@
                 <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
+                <!-- <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt=""> -->
             </a>
         </div>
 
         <div class="nav">
             <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="type_of_user.html">SignUp</a> | <a href="type_of_user.html"
+            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="type_of_user.html"
                 class="nav-link">SignIn</a>
         </div>
     </nav>
-    <div class="container">
-        <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img" width="500px" height="500px">
-        <form method="post" action="{% url 'signin' %}" class="signin">
-            <h1 class="title">SignIn</h1>
-            <div class="kname">
-                <label for="email" class="label">Email Id</label><br>
-                <input type="email" class="email" name="email" required placeholder="Enter your email id"><br>
-                <label for="pwd" class="label">Password</label><br>
-                <input type="password" name="pwd" class="input" required placeholder="Enter your password"><br>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 col-sm-12 img-column">
+                <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img-fluid" height="500px"
+                    width="500px">
             </div>
-            <div class="check">
-                <input type="checkbox" required><label for="checkbox" class="tc"> Keep me signed in.</label><br>
+            <div class="col-md-6 col-sm-12 border border-dark">
+                <form action="{% url 'user_signin' %}" method="post">
+                    <h2 class="text-center">Sign In</h2>
+                    {% csrf_token %}
+                    {% if messages %}
+                    {% for message in messages %}
+                    {% if message.tags == "error" %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {% else %}
+                    {% endif %}
+                    {% endfor %}
+                    {% endif %}
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" id="username" name="username" class="form-control"
+                            placeholder="Enter your username">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password" class="form-control"
+                            placeholder="Enter your password">
+                    </div>
+                    <div class="m-3 text-center">
+                        Don't have an account? <a href="user_signup.html">Signup</a>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign In</button>
+                </form>
             </div>
-            <input type="submit" name="Submit" class="submit">
-            <p class="pa">
-                Don't have an account? <a href="user_signup.html" class="signup">SignUp</a>
-            </p>
-        </form>
+        </div>
     </div>
 </body>
 
