--- a/app/templates/user_signup.html
+++ b/app/templates/user_signup.html
@@ -5,29 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AVYA | SIGNUP</title>
-    <link rel="stylesheet" href="../static/css/signup.css">
+    <title>Signup</title>
+    <link rel="stylesheet" href="../static/css/nav.css">
     <link rel="icon" href="../static/images/Monk-logo.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <style>
-        .alert {
-            background-color: red;
-            color: white;
-            padding: 10px;
-            display: inline-block;
+        .img-column {
+            padding: 0% 0% 0% 6%;
+        }
+
+        .form-group label,
+        .form-control {
+            font-size: 1.2rem;
+        }
+
+        h2 {
+            font-size: 3rem;
+            font-weight: bold;
+            color: #333;
+            letter-spacing: 2px;
         }
     </style>
+
 </head>
 
 <body>
     <nav class="navbar">
-        <a href="blog.html" class="anch">
+        <a href="#home" class="anch">
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
-            <a href="blog.html" class="anch">
-                <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
+            <a href="#home" class="anch">
+                <!-- <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt=""> -->
                 <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
@@ -35,54 +47,75 @@
                 <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
+                <!-- <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
                 <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
-                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt=""> -->
             </a>
         </div>
 
         <div class="nav">
             <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="type_of_user.html">SignUp</a> | <a href="type_of_user.html"
+            <a class="nav-link" href="type_of_user.html">SignUp</a> <a href="type_of_user.html"
                 class="nav-link">SignIn</a>
         </div>
     </nav>
-    <div class="container">
-        <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img" width="500px" height="500px">
-        <form action="#" class="signup">
-            <h1 class="title">Signup</h1>
-            <div class="name">
-                <div class="fname">
-                    <label for="fname" class="label">First Name</label><br>
-                    <input type="text" name="fname" class="input" required placeholder="Enter your first name"><br>
-                </div>
-                <div class="lname">
-                    <label for="lname" class="label">Last Name</label><br>
-                    <input type="text" name="lname" class="input" required placeholder="Enter your last name"><br>
-                </div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 col-sm-12 img-column">
+                <img src="../static/images/Monk-logo.png" alt="Monk-logo" class="img-fluid" height="500px"
+                    width="500px">
             </div>
-            <label for="email" class="label">Email Id</label><br>
-            <input type="email" class="email" name="email" required placeholder="Enter your email id"><br>
-            <div class="password">
-                <div class="p">
-                    <label for="pwd" class="label">Password</label><br>
-                    <input type="password" name="pwd" class="input" required placeholder="Enter your password"><br>
-                </div>
-                <div class="cp">
-                    <label for="cpwd" class="label">Confirm Password</label><br>
-                    <input type="password" name="cpwd" class="input" required placeholder="Confirm your password"><br>
-                </div>
+            <div class="col-md-6 col-sm-12 border border-dark">
+                <form action="{% url 'user_signup' %}" method="post">
+                    <h2 class="text-center">Sign Up</h2>
+                    {% csrf_token %}
+                    {% if messages %}
+                    {% for message in messages %}
+                    {% if message.tags == "error" %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    {% endif %}
+                    {% endfor %}
+                    {% endif %}
+                    <div class="form-group" style="display: inline-block; width: 45%;">
+                        <label for="firstname">First Name</label>
+                        <input type="text" id="firstname" name="firstname" class="form-control"
+                            placeholder="Enter your first name">
+                    </div>
+                    <div class="form-group" style="display: inline-block; width: 45%; margin-left: 8%;">
+                        <label for="lastname">Last Name</label>
+                        <input type="text" id="lastname" name="lastname" class="form-control"
+                            placeholder="Enter your last name">
+                    </div>
+
+                    <div class="form-group mb-2">
+                        <label for="email">Email</label>
+                        <input type="email" id="eamil" name="email" class="form-control"
+                            placeholder="Enter your email id">
+                    </div>
+                    <div class="form-group mb-2">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password" class="form-control"
+                            placeholder="Enter your password">
+                    </div>
+                    <div class="form-group mb-2">
+                        <label for="password">Confirm Password</label>
+                        <input type="password" id="password" name="password" class="form-control"
+                            placeholder="Confirm your password">
+                    </div>
+                    <div class="text-center mt-2">
+                        Already have an account? <a href="user_signin.html">Signin</a>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign Up</button>
+                </form>
             </div>
-            <div class="check">
-                <input type="checkbox" required><label for="checkbox" class="tc"> I accept all the Terms &
-                    Conditions.</label><br>
-            </div>
-            <input type="submit" name="Submit" class="submit">
-            <p class="pa">
-                Already have an account? <a href="user_signin.html" class="signin">SignIn</a>
-            </p>
-        </form>
+        </div>
     </div>
 </body>
 
