--- a/app/templates/details_collection.html
+++ b/app/templates/details_collection.html
@@ -12,30 +12,32 @@
 
 <body>
     <nav class="navbar">
-        <a href="{% url 'levelselection' %}" class="anch">
-            <img class="logo" src="../static/My project-2.png" alt="Monk-logo"></a>
+        <a href="#home" class="anch">
+            <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
-            <a href="{% url 'levelselection' %}" class="anch">
-                <img src="../static/watermark/watermark (1).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (2).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (3).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (4).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (6).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (7).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (8).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (5).png" class="watermark2" alt="">
-                <img src="../static/watermark/watermark (9).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (10).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (11).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (12).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (13).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (14).png" class="watermark" alt="">
-                <img src="../static/watermark/watermark (15).png" class="watermark" alt="">
+            <a href="{% url 'blog' %}" class="anch">
+                <!-- <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (4).png" class="watermark" alt=""> -->
+                <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (5).png" class="watermark2" alt="">
+                <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
+                <!-- <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
+                <img src="../static/images/watermark/watermark (15).png" class="watermark" alt=""> -->
             </a>
         </div>
+
         <div class="nav">
-            <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
-            <!-- <a class="nav-link" href="signup.html">SignUp</a> | <a href="signin.html" class="nav-link">SignIn</a> -->
+            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="type_of_user.html"
+                class="nav-link">SignIn</a>
         </div>
     </nav>
     <div class="container">
