--- a/app/templates/type_of_user.html
+++ b/app/templates/type_of_user.html
@@ -17,32 +17,34 @@
 
 <body class="bg-dark text-white">
   <nav class="navbar">
-    <a href="{% url 'levelselection' %}" class="anch">
-      <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
+    <a href="{% url 'blog' %}" class="anch">
+        <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
     <div class="watermark1">
-      <a href="{% url 'levelselection' %}" class="anch">
-        <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (4).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (5).png" class="watermark2" alt="">
-        <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
-        <img src="../static/images/watermark/watermark (15).png" class="watermark" alt="">
-      </a>
+        <a href="{% url 'blog' %}" class="anch">
+            <!-- <img src="../static/images/watermark/watermark (1).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (2).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (3).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (4).png" class="watermark" alt=""> -->
+            <img src="../static/images/watermark/watermark (6).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (7).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (8).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (5).png" class="watermark2" alt="">
+            <img src="../static/images/watermark/watermark (9).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (10).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (11).png" class="watermark" alt="">
+            <!-- <img src="../static/images/watermark/watermark (12).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (13).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (14).png" class="watermark" alt="">
+            <img src="../static/images/watermark/watermark (15).png" class="watermark" alt=""> -->
+        </a>
     </div>
 
     <div class="nav">
-      <a class="nav-link" href="{% url 'blog' %}">Home</a>
+        <a class="nav-link" href="{% url 'blog' %}">Home</a>
+        <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
+            class="nav-link">SignIn</a>
     </div>
-  </nav>
+</nav>
   <div class="container text-center">
     <div class="row align-items-center">
       <h1 class="display-6 mt-5 mb-5">Type of User</h1>
