--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -36,7 +36,7 @@
 
         <div class="nav">
             <a class="nav-link" href="{% url 'blog' %}">Home</a>
-            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="type_of_user.html"
+            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
                 class="nav-link">SignIn</a>
         </div>
     </nav>
