--- a/app/templates/details_collection.html
+++ b/app/templates/details_collection.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav class="navbar">
-        <a href="#home" class="anch">
+        <a href="{% url 'blog' %}" class="anch">
             <img class="logo" src="../static/images/My project-2.png" alt="Monk-logo"></a>
         <div class="watermark1">
             <a href="{% url 'blog' %}" class="anch">
@@ -36,7 +36,7 @@
 
         <div class="nav">
             <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="type_of_user.html"
+            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
                 class="nav-link">SignIn</a>
         </div>
     </nav>
