--- a/app/templates/intermediate.html
+++ b/app/templates/intermediate.html
@@ -29,6 +29,10 @@
         .card-title {
             color: black;
         }
+
+        .nav-link {
+            display: inline-block;
+        }
     </style>
 </head>
 
