--- a/app/templates/posedetection.html
+++ b/app/templates/posedetection.html
@@ -42,9 +42,8 @@
         </div>
 
         <div class="nav">
-            <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
-                class="nav-link">SignIn</a>
+            <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
+            <a class="nav-link" href="{% url 'signout' %}">SignOut</a>
         </div>
     </nav>
     <div class="container">
