--- a/app/templates/expert.html
+++ b/app/templates/expert.html
@@ -57,10 +57,9 @@
     </div>
 
     <div class="nav">
-        <a class="nav-link" href="#">Home</a>
-        <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
-            class="nav-link">SignIn</a>
-    </div>
+        <a class="nav-link" href="{% url 'levelselection' %}">Home</a>
+        <a class="nav-link" href="{% url 'signout' %}">SignOut</a>
+      </div>
 </nav>
   <div class="container-fluid mt-4">
     <h1 class="text-center  text-white mb-4">Beginner</h1>
