--- a/app/templates/nutritionist_signin.html
+++ b/app/templates/nutritionist_signin.html
@@ -55,8 +55,8 @@
         </div>
 
         <div class="nav">
-            <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="type_of_user.html">SignUp</a> <a href="{% url 'type_of_user' %}"
+            <a class="nav-link" href="{% url 'blog' %}">Home</a>
+            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
                 class="nav-link">SignIn</a>
         </div>
     </nav>
@@ -94,7 +94,7 @@
                             placeholder="Enter your password">
                     </div>
                     <div class="m-3 text-center">
-                        Don't have an account? <a href="user_signup.html">Signup</a>
+                        Don't have an account? <a href="{% url 'nutritionist_signup' %}">Signup</a>
                     </div>
 
                     <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign In</button>
