--- a/app/templates/user_signin.html
+++ b/app/templates/user_signin.html
@@ -10,6 +10,9 @@
     <link rel="icon" href="../static/images/Monk-logo.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@200&display=swap" rel="stylesheet">
     <style>
         .img-column {
             padding: 0% 0% 0% 6%;
@@ -94,7 +97,7 @@
                             placeholder="Enter your password">
                     </div>
                     <div class="m-3 text-center">
-                        Don't have an account? <a href="user_signup.html">Signup</a>
+                        Don't have an account? <a href="{% url 'user_signup' %}">Signup</a>
                     </div>
 
                     <button type="submit" class="btn btn-primary d-block m-auto px-4">Sign In</button>
