--- a/app/templates/warrior3-knowledge.html
+++ b/app/templates/warrior3-knowledge.html
@@ -55,8 +55,7 @@
 
         <div class="nav">
             <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="{% url 'type_of_user' %}">SignUp</a> <a href="{% url 'type_of_user' %}"
-                class="nav-link">SignIn</a>
+            <a class="nav-link" href="{% url 'signout' %}">SignOut</a>
         </div>
     </nav>
     <div class="container-fluid h-100">
